storage: Fix scrollbar issue; change pre display

--- a/pkg/storaged/storage.scss
+++ b/pkg/storaged/storage.scss
@@ -406,7 +406,7 @@ td.storage-action {
 }
 
 .inline-pre {
-    display: inline;
+    display: inline-block;
     padding: 4px;
 }
 
